# iati-registry-localdev

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  fake-model-parameters.toml  fakeiati.py  pyproject.toml  requirements.txt  requirements_dev.txt
iati_faker_model/: __init__.py  model.py  records.py
src/iati_faker_model/: _cli.py  random.py  records.py
suitecrm/: Dockerfile  config_si.php  php.ini.patch
