[project]
name = "iatifaker"
description = "Tools for faking IATI data and injecting into the IATI Registry"
authors = [{name="IATI Secretariat", email="support@iatistandard.org"}]
version = "0.2.0"
requires-python = ">= 3.12.6"
readme = "README.md"
license = {file = "LICENSE.txt"}
dependencies = [
    "faker",
    "pycountry",
    "pytz"
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "flake8-pyproject",
    "isort",
    "pip-tools",
    "ipython",
    "tqdm"
]

[tool.pip-tools]
strip-extras = true

[tool.isort]
py_version=312
extend_skip = ['__pycache__', '.ve', '.venv']
skip_gitignore = true
src_paths = ['libsuitecrm', 'tests']
line_length = 119
profile = "black"

[tool.flake8]
max-line-length = 119
extend_ignore = ['E203', 'W503', 'E275']
exclude = ['__pycache__', '.pytest_cache', '.ve', '.venv']
max_complexity = 7

[tool.black]
line-length = 119
target-version = ['py312']
include=['''src/.*/*.py$''']
